# This file is a part of Geeqie project (https://www.geeqie.org/).
# Copyright (C) 2008 - 2023 The Geeqie Team
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

script_sources += files('authors.sh',
'desktop-file-validate.sh',
'devel-install.sh',
'doxygen-help.sh',
'doxygen.sh',
'geeqie-download-appimage.sh',
'generate-ClayRGB1998-icc-h.sh',
'generate-man-page.sh',
'get-test-images.sh',
'gq-marshal-pragma.sh',
'image-test.sh',
'keyword_merge.sh',
'lua-test.sh',
'modify-downloaded-icons.sh',
'new-release.sh',
'template-desktop.sh',
'translators.sh',
'untranslated-text.sh',
'web-help.sh')

