# This file is a part of Geeqie project (https://www.geeqie.org/).
# Copyright (C) 2008 - 2022 The Geeqie Team
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

main_sources = files('advanced-exif.c',
'advanced-exif.h',
'bar.c',
'bar-comment.c',
'bar-comment.h',
'bar-exif.c',
'bar-exif.h',
'bar-gps.c',
'bar-gps.h',
'bar.h',
'bar-histogram.c',
'bar-histogram.h',
'bar-keywords.c',
'bar-keywords.h',
'bar-rating.c',
'bar-rating.h',
'bar-sort.c',
'bar-sort.h',
'cache.c',
'cache.h',
'cache-loader.c',
'cache-loader.h',
'cache-maint.c',
'cache-maint.h',
'cellrenderericon.c',
'cellrenderericon.h',
'collect.c',
'collect-dlg.c',
'collect-dlg.h',
'collect.h',
'collect-io.c',
'collect-io.h',
'collect-table.c',
'collect-table.h',
'color-man.c',
'color-man.h',
'compat.c',
'compat.h',
'debug.c',
'debug.h',
'desktop-file.c',
'desktop-file.h',
'dnd.c',
'dnd.h',
'dupe.c',
'dupe.h',
'editors.c',
'editors.h',
'exif.c',
'exif-common.c',
'exif.h',
'exif-int.h',
'exiv2.cc',
'filecache.c',
'filecache.h',
'filedata.c',
'filedata.h',
'filefilter.c',
'filefilter.h',
'format-canon.c',
'format-canon.h',
'format-fuji.c',
'format-fuji.h',
'format-nikon.c',
'format-nikon.h',
'format-olympus.c',
'format-olympus.h',
'format-raw.c',
'format-raw.h',
'fullscreen.c',
'fullscreen.h',
'glua.h',
'histogram.c',
'histogram.h',
'history-list.c',
'history-list.h',
'image.c',
'image.h',
'image-load.c',
'image-load-collection.c',
'image-load-collection.h',
'image-load-cr3.c',
'image-load-cr3.h',
'image-load-dds.c',
'image-load-dds.h',
'image-load-djvu.c',
'image-load-djvu.h',
'image-load-external.c',
'image-load-external.h',
'image-load-ffmpegthumbnailer.c',
'image-load-ffmpegthumbnailer.h',
'image-load-gdk.c',
'image-load-gdk.h',
'image-load.h',
'image-load-heif.c',
'image-load-heif.h',
'image-load-j2k.c',
'image-load-j2k.h',
'image-load-jpeg.c',
'image-load-jpeg.h',
'image-load-jpegxl.c',
'image-load-jpegxl.h',
'image-load-libraw.c',
'image-load-libraw.h',
'image-load-pdf.c',
'image-load-pdf.h',
'image-load-psd.c',
'image-load-psd.h',
'image-load-svgz.c',
'image-load-svgz.h',
'image-load-tiff.c',
'image-load-tiff.h',
'image-load-webp.c',
'image-load-webp.h',
'image-load-zxscr.c',
'image-load-zxscr.h',
'image-overlay.c',
'image-overlay.h',
'img-view.c',
'img-view.h',
'intl.h',
'jpeg-parser.c',
'jpeg-parser.h',
'keymap-template.c',
'keymap-template.h',
'layout.c',
'layout-config.c',
'layout-config.h',
'layout.h',
'layout-image.c',
'layout-image.h',
'layout-util.c',
'layout-util.h',
'logwindow.c',
'logwindow.h',
'lua.c',
'main.c',
'main.h',
'md5-util.c',
'md5-util.h',
'menu.c',
'menu.h',
'metadata.c',
'metadata.h',
'misc.c',
'misc.h',
'options.c',
'options.h',
'osd.c',
'osd.h',
'pan-view.h',
'pixbuf-renderer.c',
'pixbuf-renderer.h',
'pixbuf-util.c',
'pixbuf-util.h',
'preferences.c',
'preferences.h',
'print.c',
'print.h',
'rcfile.c',
'rcfile.h',
'remote.c',
'remote.h',
'renderer-tiles.c',
'renderer-tiles.h',
'search-and-run.c',
'search-and-run.h',
'search.c',
'search.h',
'secure-save.c',
'secure-save.h',
'shortcuts.c',
'shortcuts.h',
'similar.c',
'similar.h',
'slideshow.c',
'slideshow.h',
'thumb.c',
'thumb.h',
'thumb-standard.c',
'thumb-standard.h',
'toolbar.c',
'toolbar.h',
'trash.c',
'trash.h',
'typedefs.h',
'ui-bookmark.c',
'ui-bookmark.h',
'ui-fileops.c',
'ui-fileops.h',
'ui-help.c',
'ui-help.h',
'ui-menu.c',
'ui-menu.h',
'ui-misc.c',
'ui-misc.h',
'ui-pathsel.c',
'ui-pathsel.h',
'ui-spinner.c',
'ui-spinner.h',
'ui-tabcomp.c',
'ui-tabcomp.h',
'ui-tree-edit.c',
'ui-tree-edit.h',
'ui-utildlg.c',
'ui-utildlg.h',
'uri-utils.c',
'uri-utils.h',
'utilops.c',
'utilops.h',
'view-dir.c',
'view-dir.h',
'view-dir-list.c',
'view-dir-list.h',
'view-dir-tree.c',
'view-dir-tree.h',
'view-file.h',
'whereami.c',
'whereami.h',
'window.c',
'window.h',
'zonedetect.c',
'zonedetect.h')

project_sources += main_sources

subdir('icons')
subdir('pan-view')
subdir('view-file')

gqmarshal = gnome.genmarshal('gq-marshal', prefix : 'gq_marshal', sources : 'gq-marshal.list')
project_sources += gqmarshal[0]
project_sources += gqmarshal[1]

icon_pairs = [
'icon_spinner', files('ui_spinner.png'),
'icon_tabcomp', files('ui_tabcomp.png'),
]

ui_icons_h = custom_target('ui_icons', output : 'ui_icons.h',
                command : [gdk_pixbuf_csource, '--raw', '--extern', '--build-list', icon_pairs],
                capture : true)

project_sources += ui_icons_h

xxd = find_program('generate-ClayRGB1998-icc-h.sh', dirs : join_paths(meson.source_root(), 'scripts'))

ClayRGB1998_icc_h = custom_target('ClayRGB1998',
                    input: 'ClayRGB1998.icc',
                    output : 'ClayRGB1998_icc.h',
                    command : [xxd, '@INPUT@', '@OUTPUT@'])

project_sources += ClayRGB1998_icc_h

executable('geeqie', project_sources,
dependencies : [
gtk_dep,
champlain_dep,
champlain_gtk_dep,
clutter_dep,
clutter_gtk_dep,
ddjvuapi_dep,
exiv2_dep,
glib_dep,
gspell_dep,
lcms_dep,
libarchive_dep,
libffmpegthumbnailer_dep,
libheif_dep,
libjpeg_dep,
libjxl_dep,
libopenjp2_dep,
libraw_dep,
libwebp_dep,
lua_dep,
poppler_glib_dep,
thread_dep,
tiff_dep
],
include_directories : [configuration_inc], install : true)
