# This file is a part of Geeqie project (https://www.geeqie.org/).
# Copyright (C) 2008 - 2022 The Geeqie Team
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

main_sources = files('advanced-exif.cc',
'advanced-exif.h',
'bar.cc',
'bar-comment.cc',
'bar-comment.h',
'bar-exif.cc',
'bar-exif.h',
'bar-gps.cc',
'bar-gps.h',
'bar.h',
'bar-histogram.cc',
'bar-histogram.h',
'bar-keywords.cc',
'bar-keywords.h',
'bar-rating.cc',
'bar-rating.h',
'bar-sort.cc',
'bar-sort.h',
'cache.cc',
'cache.h',
'cache-loader.cc',
'cache-loader.h',
'cache-maint.cc',
'cache-maint.h',
'cellrenderericon.cc',
'cellrenderericon.h',
'collect.cc',
'collect-dlg.cc',
'collect-dlg.h',
'collect.h',
'collect-io.cc',
'collect-io.h',
'collect-table.cc',
'collect-table.h',
'color-man.cc',
'color-man.h',
'compat.cc',
'compat.h',
'debug.cc',
'debug.h',
'desktop-file.cc',
'desktop-file.h',
'dnd.cc',
'dnd.h',
'dupe.cc',
'dupe.h',
'editors.cc',
'editors.h',
'exif.cc',
'exif-common.cc',
'exif.h',
'exif-int.h',
'exiv2.cc',
'filecache.cc',
'filecache.h',
'filedata.cc',
'filedata.h',
'filefilter.cc',
'filefilter.h',
'format-canon.cc',
'format-canon.h',
'format-fuji.cc',
'format-fuji.h',
'format-nikon.cc',
'format-nikon.h',
'format-olympus.cc',
'format-olympus.h',
'format-raw.cc',
'format-raw.h',
'fullscreen.cc',
'fullscreen.h',
'glua.h',
'histogram.cc',
'histogram.h',
'history-list.cc',
'history-list.h',
'image.cc',
'image.h',
'image-load.cc',
'image-load-collection.cc',
'image-load-collection.h',
'image-load-cr3.cc',
'image-load-cr3.h',
'image-load-dds.cc',
'image-load-dds.h',
'image-load-djvu.cc',
'image-load-djvu.h',
'image-load-external.cc',
'image-load-external.h',
'image-load-ffmpegthumbnailer.cc',
'image-load-ffmpegthumbnailer.h',
'image-load-gdk.cc',
'image-load-gdk.h',
'image-load.h',
'image-load-heif.cc',
'image-load-heif.h',
'image-load-j2k.cc',
'image-load-j2k.h',
'image-load-jpeg.cc',
'image-load-jpeg.h',
'image-load-jpegxl.cc',
'image-load-jpegxl.h',
'image-load-libraw.cc',
'image-load-libraw.h',
'image-load-pdf.cc',
'image-load-pdf.h',
'image-load-psd.cc',
'image-load-psd.h',
'image-load-svgz.cc',
'image-load-svgz.h',
'image-load-tiff.cc',
'image-load-tiff.h',
'image-load-webp.cc',
'image-load-webp.h',
'image-load-zxscr.cc',
'image-load-zxscr.h',
'image-overlay.cc',
'image-overlay.h',
'img-view.cc',
'img-view.h',
'intl.h',
'jpeg-parser.cc',
'jpeg-parser.h',
'keymap-template.cc',
'keymap-template.h',
'layout.cc',
'layout-config.cc',
'layout-config.h',
'layout.h',
'layout-image.cc',
'layout-image.h',
'layout-util.cc',
'layout-util.h',
'logwindow.cc',
'logwindow.h',
'lua.cc',
'main.cc',
'main.h',
'main-defines.h',
'md5-util.cc',
'md5-util.h',
'menu.cc',
'menu.h',
'metadata.cc',
'metadata.h',
'misc.cc',
'misc.h',
'options.cc',
'options.h',
'osd.cc',
'osd.h',
'pan-view.h',
'pixbuf-renderer.cc',
'pixbuf-renderer.h',
'pixbuf-util.cc',
'pixbuf-util.h',
'preferences.cc',
'preferences.h',
'print.cc',
'print.h',
'rcfile.cc',
'rcfile.h',
'remote.cc',
'remote.h',
'renderer-tiles.cc',
'renderer-tiles.h',
'search-and-run.cc',
'search-and-run.h',
'search.cc',
'search.h',
'secure-save.cc',
'secure-save.h',
'shortcuts.cc',
'shortcuts.h',
'similar.cc',
'similar.h',
'slideshow.cc',
'slideshow.h',
'thumb.cc',
'thumb.h',
'thumb-standard.cc',
'thumb-standard.h',
'toolbar.cc',
'toolbar.h',
'trash.cc',
'trash.h',
'typedefs.h',
'ui-bookmark.cc',
'ui-bookmark.h',
'ui-fileops.cc',
'ui-fileops.h',
'ui-help.cc',
'ui-help.h',
'ui-menu.cc',
'ui-menu.h',
'ui-misc.cc',
'ui-misc.h',
'ui-pathsel.cc',
'ui-pathsel.h',
'ui-tabcomp.cc',
'ui-tabcomp.h',
'ui-tree-edit.cc',
'ui-tree-edit.h',
'ui-utildlg.cc',
'ui-utildlg.h',
'uri-utils.cc',
'uri-utils.h',
'utilops.cc',
'utilops.h',
'view-dir.cc',
'view-dir.h',
'view-dir-list.cc',
'view-dir-list.h',
'view-dir-tree.cc',
'view-dir-tree.h',
'view-file.h',
'window.cc',
'window.h')

project_sources += main_sources

subdir('authors')
subdir('icons')
subdir('pan-view')
subdir('third-party')
subdir('ui')
subdir('view-file')

gq_marshal = gnome.genmarshal('gq-marshal', prefix : 'gq_marshal', sources : 'gq-marshal.list')

project_sources += gq_marshal[1]

gq_marshal_pragma_sh = find_program('gq-marshal-pragma.sh', dirs : scriptsdir)

gq_marshal_pragma = custom_target('gq-marshal-pragma',
                    input : gq_marshal[0],
                    output : 'gq-marshal-pragma.c',
                    command : [gq_marshal_pragma_sh, '@INPUT@', '@OUTPUT@'])

project_sources += gq_marshal_pragma

if conf_data.get('HAVE_LCMS', 0) == 1
    xxd_sh = find_program('generate-ClayRGB1998-icc-h.sh', dirs : join_paths(meson.project_source_root(), 'scripts'))

    ClayRGB1998_icc_h = custom_target('ClayRGB1998',
                        input: 'ClayRGB1998.icc',
                        output : 'ClayRGB1998_icc.h',
                        command : [xxd_sh, '@INPUT@', '@OUTPUT@'])

    project_sources += ClayRGB1998_icc_h
endif

geeqie_exe = executable('geeqie', project_sources,
dependencies : [
gtk_dep,
champlain_dep,
champlain_gtk_dep,
clutter_dep,
clutter_gtk_dep,
ddjvuapi_dep,
exiv2_dep,
glib_dep,
gspell_dep,
lcms_dep,
libarchive_dep,
libdw_dep,
libexecinfo_dep,
libffmpegthumbnailer_dep,
libheif_dep,
libjpeg_dep,
libjxl_dep,
libopenjp2_dep,
libraw_dep,
libunwind_dep,
libwebp_dep,
lua_dep,
poppler_glib_dep,
thread_dep,
tiff_dep
],
include_directories : [configuration_inc], install : true)
