# This file is a part of Geeqie project (https://www.geeqie.org/).
# Copyright (C) 2008 - 2023 The Geeqie Team
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#

i18n.merge_file(
    input : 'org.geeqie.open-with.desktop.in',
    output : 'org.geeqie.open-with.desktop',
    type : 'desktop',
    po_dir : podir,
    install : true,
    install_dir : desktopdir)


#~ desktop_sources += files('org.geeqie.open-with.desktop.in')
